--- a/source/index.html
+++ b/source/index.html
@@ -7,17 +7,15 @@
 </head>
 
 <body>
-    <header class="page-header">
-        <a class="page-header__logo">
-            <img class="page-header__logo-image" src="img/logotype-mobile.svg" width="33" height="38" alt="Кэт энерджи">
+    <header class="header">
+        <a class="header__logo">
+            <img class="header__logo-image" src="img/logotype-mobile.svg" width="33" height="38" alt="Кэт энерджи">
+            <img class="header__title-image" src="img/title-mobile.svg" width="101" height="18" alt="Cat Energy">
         </a>
-        <a class="page-header__title">
-            <img class="page-header__title-image" src="img/title-mobile.svg" width="101" height="18" alt="Cat Energy">
-        </a>
-        <nav class="main-nav">
-            <button class="main-nav__toggle" type="button">Открыть меню</button>
-            <div class="main-nav__wrapper">
-                <ul class="main-nav__list site-list">
+        <nav class="navigation">
+            <button class="navigation__toggle" type="button">Открыть меню</button>
+
+                <ul class="navigation__list site-list">
                     <li class="site-list__item site-list__item--active">
                         <a>Главная</a>
                     </li>
@@ -28,16 +26,16 @@
                         <a href="form.html">Подбор программы</a>
                     </li>
                 </ul>
-            </div>
+
         </nav>
     </header>
-    <main class="page-main">
-        <section class="nutrition">
-            <div class="nutrition__wrapper">
-                <h1 class="nutrition__slogan">Функциональное питание для котов</h1>
-                <p class="nutrition__intro">Занялся собой? Займись котом!</p>
-                <img class="nutrition__image" src="img/feed-packaging.jpg" width="280" height="270" alt="Упаковка корма">
-                <a class="nutrition__feed-form button" href="#">Подобрать программу</a>
+    <main class="main">
+        <section class="intro">
+            <div class="intro__wrapper">
+                <h1 class="intro__slogan">Функциональное питание для котов</h1>
+                <p class="intro__text">Занялся собой? Займись котом!</p>
+                <img class="intro__image" src="img/feed-packaging.jpg" width="280" height="270" alt="Упаковка корма">
+                <a class="intro__link button" href="#">Подобрать программу</a>
             </div>
         </section>
         <section class="programs">
@@ -47,12 +45,12 @@
                     <li class="programs__item programs__item--slim">
                         <h3 class="programs__title">Похудение</h3>
                         <p class="programs__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес </p>
-                        <button class="programs__catalog button" type="button">Каталог Slim<span>&#8594;</span></button>
+                        <a class="programs__catalog button" href="#">Каталог Slim<span>&#8594;</span></a>
                     </li>
                     <li class="programs__item programs__item--pro">
                         <h3 class="programs__title">Набор массы</h3>
                         <p class="programs__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мыщцы!</p>
-                        <button class="programs__catalog button" type="button">Каталог Pro<span>&#8594;</span></button>
+                        <a class="programs__catalog button" href="#">Каталог Pro<span>&#8594;</span></a>
                     </li>
                 </ul>
             </div>
@@ -81,28 +79,29 @@
                 <h2 class="example__title">Живой пример</h2>
                 <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнеиу спит 16 часов в день.</p>
                 <p class="example__stats"> 5 кг <span>снижение веса</span> 60 дней <span>затрачено времени</span></p>
-                <small class="example__text stats__legend">
+                <small class="example__text">
                     Затраты на питание: 15000руб.
                 </small>
                 <div class="slider">
-                    <img class="example__image" src="img/fatcat.jpg" width="311" height="232" alt="Кот до">
-                    <p class="slider__toggles">
+                    <img class="slider__image" src="img/fatcat.jpg" width="311" height="232" alt="Кот до">
+                    <div class="slider__toggles">
                         <button class="slider__toggle" type="button">Было</button>
                         <button class="slider__toggle" type="button">Стало</button>
-                    </p>
+                    </div>
                 </div>
             </div>
         </section>
-        <footer class="page-footer">
-            <div class="page-footer__wrapper">
-                <div class="page-footer__contacts contacts">
-                    <b class="info-contacts__title">Приглашаем к сотрудничеству диллеров!</b>
+        </main>
+        <footer class="footer">
+            <div class="footer__wrapper">
+                <div class="footer__contacts">
+                    <h2 class="info-contacts__title">Приглашаем к сотрудничеству диллеров!</h2>
                     <p class="info-contacts__text">ул.Большая Конюшенская , д.19/8 Санкт-Петербург</p>
                     <img class="info-contacts__image" src="img/card.jpg" width="320" height="360" alt="Карта">
                 </div>
-                <div class="page-footer__social social">
+                <div class="social">
                     <a class="social__title">
-                      <img class="page-header__title-image" src="img/title-mobile.svg" width="101" height="18" alt="Cat Energy">
+                      <img class="social__title-image" src="img/title-mobile.svg" width="101" height="18" alt="Cat Energy">
                     </a>
                     <ul class="social__list">
                         <li class="social__item">
@@ -116,15 +115,14 @@
                         </li>
                     </ul>
                 </div>
-                <div class="page-footer__copyright copyright">
+                <div class="copyright">
                     <b class="copyright__text">Разработано:</b>
-                    <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-                    <a class="button copyright__logo" href="https://htmlacademy.ru/intensive/adaptive">
+                    <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
+
                         <img class="copyright__logo-image" src="img/logohtmlacademy.jpg" width="226" height="30" alt="HTML Academy"></a>
                 </div>
             </div>
         </footer>
-    </main>
 </body>
 
 </html>
