--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,7 +8,7 @@
 
 <body>
     <header class="header">
-        <a class="header__logo">
+        <a class="header__logo" href="index.html">
             <img class="header__logo-image" src="img/logotype-mobile.svg" width="33" height="38" alt="Кэт энерджи">
             <img class="header__title-image" src="img/title-mobile.svg" width="101" height="18" alt="Cat Energy">
         </a>
@@ -33,46 +33,59 @@
                 <h1 class="catalog__slogan">Каталог продукции</h1>
                 <ul class="catalog__list">
                     <li>
-                        <img class="catalog__image" src="img/pro500chiken.jpg" width="140" height="144" alt="Упаковка корма pro500chiken">
-                        <h3 class="catalog__item">Cat Energy Pro 500 г</h3>
-                        <p class="catalog__text">Объем 500 г Вкус Курица Цена 700 р</p>
-                        <button class="catalog__order" type="button">Заказать</button>
+                        <article class="catalog__item">
+                            <img class="catalog__image" src="img/pro500chiken.jpg" width="140" height="144" alt="Упаковка корма pro500chiken">
+                            <h1 class="catalog__title">Cat Energy Pro 500 г</h1>
+                            <p class="catalog__text">Объем 500 г Вкус Курица Цена 700 р</p>
+                            <button class="catalog__order" type="button">Заказать</button>
+                        </article>
                     </li>
                     <li>
-                        <img class="catalog__image" src="img/pro1000chiken.jpg" width="140" height="144" alt="Упаковка корма pro1000chiken">
-                        <h3 class="catalog__item">Cat Energy Pro 1000 г</h3>
-                        <p class="catalog__text">Объем 1000 г Вкус Курица Цена 1000 р</p>
-                        <button class="catalog__order" type="button">Заказать</button>
+                        <article class="catalog__item">
+                            <img class="catalog__image" src="img/pro1000chiken.jpg" width="140" height="144" alt="Упаковка корма pro1000chiken">
+                            <h1 class="catalog__title">Cat Energy Pro 1000 г</h1>
+                            <p class="catalog__text">Объем 1000 г Вкус Курица Цена 1000 р</p>
+                            <button class="catalog__order" type="button">Заказать</button>
+                        </article>
                     </li>
                     <li>
-                        <img class="catalog__image" src="img/pro500fish.jpg" width="140" height="144" alt="Упаковка корма pro500fish">
-                        <h3 class="catalog__item">Cat Energy Pro 500 г</h3>
-                        <p class="catalog__text">Объем 500 г Вкус Рыба Цена 700 р</p>
-                        <button class="catalog__order" type="button">Заказать</button>
+                        <article class="catalog__item">
+                            <img class="catalog__image" src="img/pro500fish.jpg" width="140" height="144" alt="Упаковка корма pro500fish">
+                            <h1 class="catalog__title">Cat Energy Pro 500 г</h1>
+                            <p class="catalog__text">Объем 500 г Вкус Рыба Цена 700 р</p>
+                            <button class="catalog__order" type="button">Заказать</button>
+                        </article>
                     </li>
                     <li>
-                        <img class="catalog__image" src="img/pro1000fish.jpg" width="140" height="144" alt="Упаковка корма pro1000fish">
-                        <h3 class="catalog__item">Cat Energy Pro 1000 г</h3>
-                        <p class="catalog__text">Объем 1000 г Вкус Рыба Цена 1000 р</p>
-                        <button class="catalog__order" type="button">Заказать</button>
+                        <article class="catalog__item">
+                            <img class="catalog__image" src="img/pro1000fish.jpg" width="140" height="144" alt="Упаковка корма pro1000fish">
+                            <h1 class="catalog__title">Cat Energy Pro 1000 г</h1>
+                            <p class="catalog__text">Объем 1000 г Вкус Рыба Цена 1000 р</p>
+                            <button class="catalog__order" type="button">Заказать</button>
+                        </article>
                     </li>
                     <li>
                         <img class="catalog__image" src="img/slim500.jpg" width="140" height="144" alt="Упаковка корма slim500">
-                        <h3 class="catalog__item">Cat Energy Slim 500 г</h3>
+                        <h1 class="catalog__item">Cat Energy Slim 500 г</h1>
                         <p class="catalog__text">Объем 500 г Вкус Гречка Цена 400 р</p>
                         <button class="catalog__order" type="button">Заказать</button>
+                        </article>
                     </li>
                     <li>
-                        <img class="catalog__image" src="img/slim1000.jpg" width="226" height="30" alt="Упаковка корма slim1000">
-                        <h3 class="catalog__item">Cat Energy Slim 1000 г</h3>
-                        <p class="catalog__text">Объем 1000 г Вкус Гречка Цена 700 р</p>
-                        <button class="catalog__order" type="button">Заказать</button>
+                        <article class="catalog__item">
+                            <img class="catalog__image" src="img/slim1000.jpg" width="226" height="30" alt="Упаковка корма slim1000">
+                            <h1 class="catalog__title">Cat Energy Slim 1000 г</h1>
+                            <p class="catalog__text">Объем 1000 г Вкус Гречка Цена 700 р</p>
+                            <button class="catalog__order" type="button">Заказать</button>
+                        </article>
                     </li>
                     <li>
-                        <img class="catalog__image" src="img/slim500рис.jpg" width="140" height="144" alt="Упаковка корма slim500рис">
-                        <h3 class="catalog__item">Cat Energy Slim 500 г</h3>
-                        <p class="catalog__text">Объем 500 г Вкус Рис Цена 500 р</p>
-                        <button class="catalog__order" type="button">Заказать</button>
+                        <article class="catalog__item">
+                            <img class="catalog__image" src="img/slim500рис.jpg" width="140" height="144" alt="Упаковка корма slim500рис">
+                            <h1 class="catalog__title">Cat Energy Slim 500 г</h1>
+                            <p class="catalog__text">Объем 500 г Вкус Рис Цена 500 р</p>
+                            <button class="catalog__order" type="button">Заказать</button>
+                        </article>
                     </li>
                 </ul>
             </div>
@@ -93,45 +106,47 @@
                     <li class="other-goods__item">
                         <h3 class="other-goods__item-title">Сахарозаменитель</h3>
                         <p class="other-goods__description">1 упаковка (100г) 200 р.</p>
-                        <button class="other-goods__order button" type="button">Заказать</button>
+                        <a class="other-goods__order button" href="">Заказать</a>
                     </li>
                     <li class="other-goods__item">
                         <h3 class="other-goods__item-title">Питьевая вода</h3>
                         <p class="other-goods__description">5 литров 50 р.</p>
-                        <button class="other-goods__order button" type="button">Заказать</button>
+                        <a class="other-goods__order button" href="">Заказать</a>
                     </li>
                     <li class="other-goods__item">
                         <h3 class="other-goods__item-title">Молоко</h3>
                         <p class="other-goods__description">1 литр 100 р.</p>
-                        <button class="other-goods__order button" type="button">Заказать</button>
+                        <a class="other-goods__order button" href="">Заказать</a>
                     </li>
                     <li class="other-goods__item">
                         <h3 class="other-goods__item-title">Витамины</h3>
                         <p class="other-goods__description">1 упаковка (300г) 300 р.</p>
-                        <button class="other-goods__order button" type="button">Заказать</button>
+                        <a class="other-goods__order button" href="">Заказать</a>
                     </li>
                 </ul>
             </div>
         </section>
         <section class="gift">
             <div class="gift__wrapper">
-                <h2 class="visually-hidden">Получи подарок</h2>
-                <img src="img/gift.svg" width="280" height="289" alt="Подарок">
-                <p class="gift__text">Закажите все и получите чехол для кота в подарок!</p>
+                <a class="gift__link" href="">
+                    <h2 class="visually-hidden">Получи подарок</h2>
+                    <img src="img/gift.svg" width="280" height="289" alt="Подарок">
+                    <p class="gift__text">Закажите все и получите чехол для кота в подарок!</p>
+                </a>
             </div>
         </section>
     </main>
+    <section class="contacts">
+        <h2 class="info-contacts__title">Приглашаем к сотрудничеству диллеров!</h2>
+        <p class="info-contacts__text">ул.Большая Конюшенская , д.19/8 Санкт-Петербург</p>
+        <img class="info-contacts__image" src="img/card.jpg" width="320" height="360" alt="Карта">
+    </section>
     <footer class="footer">
         <div class="footer__wrapper">
-            <div class="footer__contacts">
-                <h2 class="info-contacts__title">Приглашаем к сотрудничеству диллеров!</h2>
-                <p class="info-contacts__text">ул.Большая Конюшенская , д.19/8 Санкт-Петербург</p>
-                <img class="info-contacts__image" src="img/card.jpg" width="320" height="360" alt="Карта">
-            </div>
+            <a class="social__title">
+                <img class="social__title-image" src="img/title-mobile.svg" width="101" height="18" alt="Cat Energy">
+            </a>
             <div class="social">
-                <a class="social__title">
-                    <img class="social__title-image" src="img/title-mobile.svg" width="101" height="18" alt="Cat Energy">
-                </a>
                 <ul class="social__list">
                     <li class="social__item">
                         <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
