--- a/source/index.html
+++ b/source/index.html
@@ -8,25 +8,23 @@
 
 <body>
     <header class="header">
-        <a class="header__logo">
+        <a class="header__logo" href="index.html">
             <img class="header__logo-image" src="img/logotype-mobile.svg" width="33" height="38" alt="Кэт энерджи">
             <img class="header__title-image" src="img/title-mobile.svg" width="101" height="18" alt="Cat Energy">
         </a>
         <nav class="navigation">
             <button class="navigation__toggle" type="button">Открыть меню</button>
-
-                <ul class="navigation__list site-list">
-                    <li class="site-list__item site-list__item--active">
-                        <a>Главная</a>
-                    </li>
-                    <li class="site-list__item">
-                        <a href="catalog.html">Каталог продукции</a>
-                    </li>
-                    <li class="site-list__item">
-                        <a href="form.html">Подбор программы</a>
-                    </li>
-                </ul>
-
+            <ul class="navigation__list site-list">
+                <li class="site-list__item site-list__item--active">
+                    <a>Главная</a>
+                </li>
+                <li class="site-list__item">
+                    <a href="catalog.html">Каталог продукции</a>
+                </li>
+                <li class="site-list__item">
+                    <a href="form.html">Подбор программы</a>
+                </li>
+            </ul>
         </nav>
     </header>
     <main class="main">
@@ -91,38 +89,37 @@
                 </div>
             </div>
         </section>
-        </main>
-        <footer class="footer">
-            <div class="footer__wrapper">
-                <div class="footer__contacts">
-                    <h2 class="info-contacts__title">Приглашаем к сотрудничеству диллеров!</h2>
-                    <p class="info-contacts__text">ул.Большая Конюшенская , д.19/8 Санкт-Петербург</p>
-                    <img class="info-contacts__image" src="img/card.jpg" width="320" height="360" alt="Карта">
-                </div>
-                <div class="social">
-                    <a class="social__title">
-                      <img class="social__title-image" src="img/title-mobile.svg" width="101" height="18" alt="Cat Energy">
-                    </a>
-                    <ul class="social__list">
-                        <li class="social__item">
-                            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
-                        </li>
-                        <li class="social__item">
-                            <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
-                        </li>
-                        <li class="social__item">
-                            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="copyright">
-                    <b class="copyright__text">Разработано:</b>
-                    <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
-
-                        <img class="copyright__logo-image" src="img/logohtmlacademy.jpg" width="226" height="30" alt="HTML Academy"></a>
-                </div>
+    </main>
+    <section class="contacts">
+        <h2 class="info-contacts__title">Приглашаем к сотрудничеству диллеров!</h2>
+        <p class="info-contacts__text">ул.Большая Конюшенская , д.19/8 Санкт-Петербург</p>
+        <img class="info-contacts__image" src="img/card.jpg" width="320" height="360" alt="Карта">
+    </section>
+    <footer class="footer">
+        <div class="footer__wrapper">
+            <a class="social__title">
+                <img class="social__title-image" src="img/title-mobile.svg" width="101" height="18" alt="Cat Energy">
+            </a>
+            <div class="social">
+                <ul class="social__list">
+                    <li class="social__item">
+                        <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+                    </li>
+                    <li class="social__item">
+                        <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+                    </li>
+                    <li class="social__item">
+                        <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+                    </li>
+                </ul>
             </div>
-        </footer>
+            <div class="copyright">
+                <b class="copyright__text">Разработано:</b>
+                <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
+                    <img class="copyright__logo-image" src="img/logohtmlacademy.jpg" width="226" height="30" alt="HTML Academy"></a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
