--- a/source/form.html
+++ b/source/form.html
@@ -42,15 +42,15 @@
         </div>
         <fieldset class="form__column">
             <ul class="form__list">
-                <li class="list__item">
+                <li class="form__item">
                     <input class="form__checkbox" type="checkbox" tabindex="-1" name="loseweight" id="loseweight" checked>
                     <label class="form__checkbox-label" tabindex="0" for="loseweight">Похудение</label>
                 </li>
-                <li class="list__item">
+                <li class="form__item">
                     <input class="form__checkbox" type="checkbox" tabindex="-1" name="masses" id="masses">
                     <label class="form__checkbox-label" tabindex="0" for="masses">Набор массы</label>
                 </li>
-                <li class="list__item">
+                <li class="form__item">
                     <input class="form__checkbox" type="checkbox" tabindex="-1" name="advice" id="advice">
                     <label class="form__checkbox-label" tabindex="0" for="advice">Не знаю (нужен ваш совет)</label>
                 </li>
@@ -107,14 +107,14 @@
     </form>
     </main>
     <section class="contacts">
-        <h2 class="info-contacts__title">Приглашаем к сотрудничеству диллеров!</h2>
-        <p class="info-contacts__text">ул.Большая Конюшенская , д.19/8 Санкт-Петербург</p>
-        <img class="info-contacts__image" src="img/card.jpg" width="320" height="360" alt="Карта">
+        <h2 class="contacts__title">Приглашаем к сотрудничеству диллеров!</h2>
+        <p class="contacts__text">ул.Большая Конюшенская , д.19/8 Санкт-Петербург</p>
+        <img class="contacts__image" src="img/card.jpg" width="320" height="360" alt="Карта">
     </section>
     <footer class="footer">
         <div class="footer__wrapper">
-            <a class="social__title">
-                <img class="social__title-image" src="img/title-mobile.svg" width="101" height="18" alt="Cat Energy">
+            <a class="footer__logo">
+                <img class="footer__logo-image" src="img/title-mobile.svg" width="101" height="18" alt="Cat Energy">
             </a>
             <div class="social">
                 <ul class="social__list">
