--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <header class="header">
-        <a class="header__logo" href="index.html">
+        <a class="header__logo">
             <img class="header__logo-image" src="img/logotype-mobile.svg" width="33" height="38" alt="Кэт энерджи">
             <img class="header__title-image" src="img/title-mobile.svg" width="101" height="18" alt="Cat Energy">
         </a>
@@ -91,14 +91,14 @@
         </section>
     </main>
     <section class="contacts">
-        <h2 class="info-contacts__title">Приглашаем к сотрудничеству диллеров!</h2>
-        <p class="info-contacts__text">ул.Большая Конюшенская , д.19/8 Санкт-Петербург</p>
-        <img class="info-contacts__image" src="img/card.jpg" width="320" height="360" alt="Карта">
+        <h2 class="contacts__title">Приглашаем к сотрудничеству диллеров!</h2>
+        <p class="contacts__text">ул.Большая Конюшенская , д.19/8 Санкт-Петербург</p>
+        <img class="contacts__image" src="img/card.jpg" width="320" height="360" alt="Карта">
     </section>
     <footer class="footer">
         <div class="footer__wrapper">
-            <a class="social__title">
-                <img class="social__title-image" src="img/title-mobile.svg" width="101" height="18" alt="Cat Energy">
+            <a class="footer__logo">
+                <img class="footer__logo-image" src="img/title-mobile.svg" width="101" height="18" alt="Cat Energy">
             </a>
             <div class="social">
                 <ul class="social__list">
@@ -115,7 +115,7 @@
             </div>
             <div class="copyright">
                 <b class="copyright__text">Разработано:</b>
-                <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
+                <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
                     <img class="copyright__logo-image" src="img/logohtmlacademy.jpg" width="226" height="30" alt="HTML Academy"></a>
             </div>
         </div>
