--- a/source/catalog.html
+++ b/source/catalog.html
@@ -37,7 +37,7 @@
                             <img class="catalog__image" src="img/pro500chiken.jpg" width="140" height="144" alt="Упаковка корма pro500chiken">
                             <h1 class="catalog__title">Cat Energy Pro 500 г</h1>
                             <p class="catalog__text">Объем 500 г Вкус Курица Цена 700 р</p>
-                            <button class="catalog__order" type="button">Заказать</button>
+                            <a class="catalog__order" href="#">Заказать</a>
                         </article>
                     </li>
                     <li>
@@ -45,7 +45,7 @@
                             <img class="catalog__image" src="img/pro1000chiken.jpg" width="140" height="144" alt="Упаковка корма pro1000chiken">
                             <h1 class="catalog__title">Cat Energy Pro 1000 г</h1>
                             <p class="catalog__text">Объем 1000 г Вкус Курица Цена 1000 р</p>
-                            <button class="catalog__order" type="button">Заказать</button>
+                            <a class="catalog__order" href="#">Заказать</a>
                         </article>
                     </li>
                     <li>
@@ -53,7 +53,7 @@
                             <img class="catalog__image" src="img/pro500fish.jpg" width="140" height="144" alt="Упаковка корма pro500fish">
                             <h1 class="catalog__title">Cat Energy Pro 500 г</h1>
                             <p class="catalog__text">Объем 500 г Вкус Рыба Цена 700 р</p>
-                            <button class="catalog__order" type="button">Заказать</button>
+                            <a class="catalog__order" href="#">Заказать</a>
                         </article>
                     </li>
                     <li>
@@ -61,14 +61,15 @@
                             <img class="catalog__image" src="img/pro1000fish.jpg" width="140" height="144" alt="Упаковка корма pro1000fish">
                             <h1 class="catalog__title">Cat Energy Pro 1000 г</h1>
                             <p class="catalog__text">Объем 1000 г Вкус Рыба Цена 1000 р</p>
-                            <button class="catalog__order" type="button">Заказать</button>
+                            <a class="catalog__order" href="#">Заказать</a>
                         </article>
                     </li>
                     <li>
-                        <img class="catalog__image" src="img/slim500.jpg" width="140" height="144" alt="Упаковка корма slim500">
-                        <h1 class="catalog__item">Cat Energy Slim 500 г</h1>
-                        <p class="catalog__text">Объем 500 г Вкус Гречка Цена 400 р</p>
-                        <button class="catalog__order" type="button">Заказать</button>
+                        <article class="catalog__item">
+                            <img class="catalog__image" src="img/slim500.jpg" width="140" height="144" alt="Упаковка корма slim500">
+                            <h1 class="catalog__item">Cat Energy Slim 500 г</h1>
+                            <p class="catalog__text">Объем 500 г Вкус Гречка Цена 400 р</p>
+                            <a class="catalog__order" href="#">Заказать</a>
                         </article>
                     </li>
                     <li>
@@ -76,7 +77,7 @@
                             <img class="catalog__image" src="img/slim1000.jpg" width="226" height="30" alt="Упаковка корма slim1000">
                             <h1 class="catalog__title">Cat Energy Slim 1000 г</h1>
                             <p class="catalog__text">Объем 1000 г Вкус Гречка Цена 700 р</p>
-                            <button class="catalog__order" type="button">Заказать</button>
+                            <a class="catalog__order" href="#">Заказать</a>
                         </article>
                     </li>
                     <li>
@@ -84,7 +85,7 @@
                             <img class="catalog__image" src="img/slim500рис.jpg" width="140" height="144" alt="Упаковка корма slim500рис">
                             <h1 class="catalog__title">Cat Energy Slim 500 г</h1>
                             <p class="catalog__text">Объем 500 г Вкус Рис Цена 500 р</p>
-                            <button class="catalog__order" type="button">Заказать</button>
+                            <a class="catalog__order" href="#">Заказать</a>
                         </article>
                     </li>
                 </ul>
@@ -104,31 +105,31 @@
                 <h2 class="other-goods__title">Дополнительные товары</h2>
                 <ul class="other-goods__list">
                     <li class="other-goods__item">
-                        <h3 class="other-goods__item-title">Сахарозаменитель</h3>
+                        <h3 class="other-goods__item-title"><a class="other-goods__link" href="#">Сахарозаменитель</a></h3>
                         <p class="other-goods__description">1 упаковка (100г) 200 р.</p>
-                        <a class="other-goods__order button" href="">Заказать</a>
+                        <a class="other-goods__order button" href="#">Заказать</a>
                     </li>
                     <li class="other-goods__item">
-                        <h3 class="other-goods__item-title">Питьевая вода</h3>
+                        <h3 class="other-goods__item-title"><a class="other-goods__link" href="#">Питьевая вода</a></h3>
                         <p class="other-goods__description">5 литров 50 р.</p>
-                        <a class="other-goods__order button" href="">Заказать</a>
+                        <a class="other-goods__order button" href="#">Заказать</a>
                     </li>
                     <li class="other-goods__item">
-                        <h3 class="other-goods__item-title">Молоко</h3>
+                        <h3 class="other-goods__item-title"><a class="other-goods__link" href="#">Молоко</a></h3>
                         <p class="other-goods__description">1 литр 100 р.</p>
-                        <a class="other-goods__order button" href="">Заказать</a>
+                        <a class="other-goods__order button" href="#">Заказать</a>
                     </li>
                     <li class="other-goods__item">
-                        <h3 class="other-goods__item-title">Витамины</h3>
+                        <h3 class="other-goods__item-title"><a class="other-goods__link" href="#">Витамины</a></h3>
                         <p class="other-goods__description">1 упаковка (300г) 300 р.</p>
-                        <a class="other-goods__order button" href="">Заказать</a>
+                        <a class="other-goods__order button" href="#">Заказать</a>
                     </li>
                 </ul>
             </div>
         </section>
         <section class="gift">
             <div class="gift__wrapper">
-                <a class="gift__link" href="">
+                <a class="gift__link" href="#">
                     <h2 class="visually-hidden">Получи подарок</h2>
                     <img src="img/gift.svg" width="280" height="289" alt="Подарок">
                     <p class="gift__text">Закажите все и получите чехол для кота в подарок!</p>
@@ -137,14 +138,14 @@
         </section>
     </main>
     <section class="contacts">
-        <h2 class="info-contacts__title">Приглашаем к сотрудничеству диллеров!</h2>
-        <p class="info-contacts__text">ул.Большая Конюшенская , д.19/8 Санкт-Петербург</p>
-        <img class="info-contacts__image" src="img/card.jpg" width="320" height="360" alt="Карта">
+        <h2 class="contacts__title">Приглашаем к сотрудничеству диллеров!</h2>
+        <p class="contacts__text">ул.Большая Конюшенская , д.19/8 Санкт-Петербург</p>
+        <img class="contacts__image" src="img/card.jpg" width="320" height="360" alt="Карта">
     </section>
     <footer class="footer">
         <div class="footer__wrapper">
-            <a class="social__title">
-                <img class="social__title-image" src="img/title-mobile.svg" width="101" height="18" alt="Cat Energy">
+            <a class="footer__logo">
+                <img class="footer__logo-image" src="img/title-mobile.svg" width="101" height="18" alt="Cat Energy">
             </a>
             <div class="social">
                 <ul class="social__list">
