--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,16 +4,19 @@
 <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи - каталог</title>
+    <link href="https://fonts.googleapis.com/css?family=Oswald&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
     <header class="header">
-        <a class="header__logo" href="index.html">
-            <img class="header__logo-image" src="img/logotype-mobile.svg" width="33" height="38" alt="Кэт энерджи">
-            <img class="header__title-image" src="img/title-mobile.svg" width="101" height="18" alt="Cat Energy">
+        <a class="header__logo">
+            <img class="header__logo-image" src="img/logo-mobile.svg" width="200" height="50" alt="Cat Energy">
         </a>
         <nav class="navigation">
-            <button class="navigation__toggle" type="button">Открыть меню</button>
+            <button class="navigation__toggle" type="button">
+              <img class="navigation__image" src="img/icon-mobile-menu.svg" width="24" height="18" alt="Открыть меню">
+            </button>
             <ul class="navigation__list site-list">
                 <li class="site-list__item ">
                     <a href="index.html">Главная</a>
@@ -34,7 +37,7 @@
                 <ul class="catalog__list">
                     <li>
                         <article class="catalog__item">
-                            <img class="catalog__image" src="img/pro500chiken.jpg" width="140" height="144" alt="Упаковка корма pro500chiken">
+                            <img class="catalog__image" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка корма pro500chiken">
                             <h1 class="catalog__title">Cat Energy Pro 500 г</h1>
                             <p class="catalog__text">Объем 500 г Вкус Курица Цена 700 р</p>
                             <a class="catalog__order" href="#">Заказать</a>
@@ -42,7 +45,7 @@
                     </li>
                     <li>
                         <article class="catalog__item">
-                            <img class="catalog__image" src="img/pro1000chiken.jpg" width="140" height="144" alt="Упаковка корма pro1000chiken">
+                            <img class="catalog__image" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Упаковка корма pro1000chiken">
                             <h1 class="catalog__title">Cat Energy Pro 1000 г</h1>
                             <p class="catalog__text">Объем 1000 г Вкус Курица Цена 1000 р</p>
                             <a class="catalog__order" href="#">Заказать</a>
@@ -50,7 +53,7 @@
                     </li>
                     <li>
                         <article class="catalog__item">
-                            <img class="catalog__image" src="img/pro500fish.jpg" width="140" height="144" alt="Упаковка корма pro500fish">
+                            <img class="catalog__image" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка корма pro500fish">
                             <h1 class="catalog__title">Cat Energy Pro 500 г</h1>
                             <p class="catalog__text">Объем 500 г Вкус Рыба Цена 700 р</p>
                             <a class="catalog__order" href="#">Заказать</a>
@@ -58,7 +61,7 @@
                     </li>
                     <li>
                         <article class="catalog__item">
-                            <img class="catalog__image" src="img/pro1000fish.jpg" width="140" height="144" alt="Упаковка корма pro1000fish">
+                            <img class="catalog__image" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Упаковка корма pro1000fish">
                             <h1 class="catalog__title">Cat Energy Pro 1000 г</h1>
                             <p class="catalog__text">Объем 1000 г Вкус Рыба Цена 1000 р</p>
                             <a class="catalog__order" href="#">Заказать</a>
@@ -66,7 +69,7 @@
                     </li>
                     <li>
                         <article class="catalog__item">
-                            <img class="catalog__image" src="img/slim500.jpg" width="140" height="144" alt="Упаковка корма slim500">
+                            <img class="catalog__image" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка корма slim500">
                             <h1 class="catalog__item">Cat Energy Slim 500 г</h1>
                             <p class="catalog__text">Объем 500 г Вкус Гречка Цена 400 р</p>
                             <a class="catalog__order" href="#">Заказать</a>
@@ -74,7 +77,7 @@
                     </li>
                     <li>
                         <article class="catalog__item">
-                            <img class="catalog__image" src="img/slim1000.jpg" width="226" height="30" alt="Упаковка корма slim1000">
+                            <img class="catalog__image" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Упаковка корма slim1000">
                             <h1 class="catalog__title">Cat Energy Slim 1000 г</h1>
                             <p class="catalog__text">Объем 1000 г Вкус Гречка Цена 700 р</p>
                             <a class="catalog__order" href="#">Заказать</a>
@@ -82,7 +85,7 @@
                     </li>
                     <li>
                         <article class="catalog__item">
-                            <img class="catalog__image" src="img/slim500рис.jpg" width="140" height="144" alt="Упаковка корма slim500рис">
+                            <img class="catalog__image" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка корма slim500рис">
                             <h1 class="catalog__title">Cat Energy Slim 500 г</h1>
                             <p class="catalog__text">Объем 500 г Вкус Рис Цена 500 р</p>
                             <a class="catalog__order" href="#">Заказать</a>
@@ -131,7 +134,7 @@
             <div class="gift__wrapper">
                 <a class="gift__link" href="#">
                     <h2 class="visually-hidden">Получи подарок</h2>
-                    <img src="img/gift.svg" width="280" height="289" alt="Подарок">
+                    <img src="img/icon-gift.svg" width="55" height="60" alt="Подарок">
                     <p class="gift__text">Закажите все и получите чехол для кота в подарок!</p>
                 </a>
             </div>
@@ -140,30 +143,32 @@
     <section class="contacts">
         <h2 class="contacts__title">Приглашаем к сотрудничеству диллеров!</h2>
         <p class="contacts__text">ул.Большая Конюшенская , д.19/8 Санкт-Петербург</p>
-        <img class="contacts__image" src="img/card.jpg" width="320" height="360" alt="Карта">
+        <img class="contacts__image" src="img/bg-map-mobile@1x.png" width="320" height="360" alt="Карта">
     </section>
     <footer class="footer">
         <div class="footer__wrapper">
             <a class="footer__logo">
-                <img class="footer__logo-image" src="img/title-mobile.svg" width="101" height="18" alt="Cat Energy">
+                <img class="footer__logo-image" src="img/logo-footer.svg" width="101" height="18" alt="Cat Energy">
             </a>
             <div class="social">
                 <ul class="social__list">
                     <li class="social__item">
-                        <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+                        <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+                          <img class="social__icon" src="img/icon-vk.svg" width="22" height="12" alt="Мы в Вконтакте"></a>
                     </li>
                     <li class="social__item">
-                        <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+                        <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
+                          <img class="social__icon" src="img/icon-insta.svg" width="16" height="16" alt="Мы в Инстаграме"></a>
                     </li>
                     <li class="social__item">
-                        <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+                        <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
+                          <img class="social__icon" src="img/icon-fb.svg" width="10" height="19" alt="Мы в Фейсбуке"></a>
                     </li>
                 </ul>
             </div>
             <div class="copyright">
-                <b class="copyright__text">Разработано:</b>
-                <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
-                    <img class="copyright__logo-image" src="img/logohtmlacademy.jpg" width="226" height="30" alt="HTML Academy">
+                <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" alt="Разработано HTML Academy">HTML Academy
+                    <img class="copyright__logo-image" src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy">
                 </a>
             </div>
         </div>
