--- a/source/index.html
+++ b/source/index.html
@@ -4,25 +4,28 @@
 <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+    <link href="https://fonts.googleapis.com/css?family=Oswald&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
     <header class="header">
         <a class="header__logo">
-            <img class="header__logo-image" src="img/logotype-mobile.svg" width="33" height="38" alt="Кэт энерджи">
-            <img class="header__title-image" src="img/title-mobile.svg" width="101" height="18" alt="Cat Energy">
+            <img class="header__logo-image" src="img/logo-mobile.svg" width="200" height="50" alt="Cat Energy">
         </a>
         <nav class="navigation">
-            <button class="navigation__toggle" type="button">Открыть меню</button>
+            <button class="navigation__toggle" type="button">
+              <img class="navigation__image" src="img/icon-mobile-menu.svg" width="24" height="18" alt="Открыть меню">
+            </button>
             <ul class="navigation__list site-list">
                 <li class="site-list__item site-list__item--active">
-                    <a>Главная</a>
+                    <a class="site-list__link">Главная</a>
                 </li>
                 <li class="site-list__item">
-                    <a href="catalog.html">Каталог продукции</a>
+                    <a class="site-list__link" href="catalog.html">Каталог продукции</a>
                 </li>
                 <li class="site-list__item">
-                    <a href="form.html">Подбор программы</a>
+                    <a class="site-list__link" href="form.html">Подбор программы</a>
                 </li>
             </ul>
         </nav>
@@ -32,7 +35,7 @@
             <div class="intro__wrapper">
                 <h1 class="intro__slogan">Функциональное питание для котов</h1>
                 <p class="intro__text">Занялся собой? Займись котом!</p>
-                <img class="intro__image" src="img/feed-packaging.jpg" width="280" height="270" alt="Упаковка корма">
+                <img class="intro__image" src="img/index-can-mobile@1x.png" width="280" height="270" alt="Упаковка корма">
                 <a class="intro__link button" href="#">Подобрать программу</a>
             </div>
         </section>
@@ -75,13 +78,13 @@
         <section class="example">
             <div class="example__wrapper">
                 <h2 class="example__title">Живой пример</h2>
-                <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнеиу спит 16 часов в день.</p>
-                <p class="example__stats"> 5 кг <span>снижение веса</span> 60 дней <span>затрачено времени</span></p>
+                <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнеиу спит 16 часов в день.</p>
+                <p class="example__stats"> 5 кг <span class="example__legend">снижение веса</span> 60 дней <span class="example__legend">затрачено времени</span></p>
                 <small class="example__text">
                     Затраты на питание: 15000руб.
                 </small>
                 <div class="slider">
-                    <img class="slider__image" src="img/fatcat.jpg" width="311" height="232" alt="Кот до">
+                    <img class="slider__image" src="img/before-mobile@1x.png" width="311" height="232" alt="Кот до">
                     <div class="slider__toggles">
                         <button class="slider__toggle" type="button">Было</button>
                         <button class="slider__toggle" type="button">Стало</button>
@@ -93,30 +96,33 @@
     <section class="contacts">
         <h2 class="contacts__title">Приглашаем к сотрудничеству диллеров!</h2>
         <p class="contacts__text">ул.Большая Конюшенская , д.19/8 Санкт-Петербург</p>
-        <img class="contacts__image" src="img/card.jpg" width="320" height="360" alt="Карта">
+        <img class="contacts__image" src="img/bg-map-mobile@1x.png" width="320" height="360" alt="Карта">
     </section>
     <footer class="footer">
         <div class="footer__wrapper">
             <a class="footer__logo">
-                <img class="footer__logo-image" src="img/title-mobile.svg" width="101" height="18" alt="Cat Energy">
+                <img class="footer__logo-image" src="img/logo-footer.svg" width="101" height="18" alt="Cat Energy">
             </a>
             <div class="social">
                 <ul class="social__list">
                     <li class="social__item">
-                        <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+                        <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+                          <img class="social__icon" src="img/icon-vk.svg" width="22" height="12" alt="Мы в Вконтакте"></a>
                     </li>
                     <li class="social__item">
-                        <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+                        <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
+                          <img class="social__icon" src="img/icon-insta.svg" width="16" height="16" alt="Мы в Инстаграме"></a>
                     </li>
                     <li class="social__item">
-                        <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+                        <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
+                          <img class="social__icon" src="img/icon-fb.svg" width="10" height="19" alt="Мы в Фейсбуке"></a>
                     </li>
                 </ul>
             </div>
             <div class="copyright">
-                <b class="copyright__text">Разработано:</b>
-                <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
-                    <img class="copyright__logo-image" src="img/logohtmlacademy.jpg" width="226" height="30" alt="HTML Academy"></a>
+                <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" alt="Разработано HTML Academy">HTML Academy
+                    <img class="copyright__logo-image" src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy">
+                </a>
             </div>
         </div>
     </footer>
