--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи - каталог</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
 
@@ -70,7 +71,7 @@
                     <li>
                         <article class="catalog__item">
                             <img class="catalog__image" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка корма slim500">
-                            <h1 class="catalog__item">Cat Energy Slim 500 г</h1>
+                            <h1 class="catalog__title">Cat Energy Slim 500 г</h1>
                             <p class="catalog__text">Объем 500 г Вкус Гречка Цена 400 р</p>
                             <a class="catalog__order" href="#">Заказать</a>
                         </article>
@@ -91,16 +92,16 @@
                             <a class="catalog__order" href="#">Заказать</a>
                         </article>
                     </li>
+                    <li>
+                        <div class="view-more">
+                            <h2 class="visually-hidden">Показать больше</h2>
+                            <span>+</span>
+                            <b class="view-more__title">Показать еще 100500 товаров</b>
+                            <p class="view-more__text">На самом деле вкусов гораздо больше!</p>
+                            <button class="view-more__button button" type="button">Показать все</button>
+                        </div>
+                    </li>
                 </ul>
-            </div>
-        </section>
-        <section class="view-more">
-            <div class="view-more__wrapper">
-                <h2 class="visually-hidden">Показать больше</h2>
-                <span>+</span>
-                <b class="view-more__title">Показать еще 100500 товаров</b>
-                <p class="view-more__text">На самом деле вкусов гораздо больше!</p>
-                <button class="view-more__button button" type="button">Показать все</button>
             </div>
         </section>
         <section class="other-goods">
