--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>HTML Academy: Кэт энерджи</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
 
@@ -13,7 +14,7 @@
     <a class="header__logo">
       <img class="header__logo-image" src="img/logo-mobile.svg" width="200" height="50" alt="Cat Energy">
     </a>
-    <nav class="navigation">
+    <nav class="navigation navigation--nojs">
       <button class="navigation__toggle" type="button">
         <img class="navigation__image" src="img/icon-mobile-menu.svg" width="24" height="18" alt="Открыть меню">
       </button>
@@ -44,12 +45,53 @@
         <h2 class="visually-hidden">Программы питания</h2>
         <ul class="programs__list">
           <li class="programs__item programs__item--slim">
+              <svg  width="35" height="49" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 70 97" style="enable-background:new 0 0 70 97;" xml:space="preserve">
+                <g><title>Иконка программы похудения</title>
+                  <path
+                    d="M54.8,0c-0.1,0-0.3,0-0.4,0c-0.7,0.4-1.1,0.9-1.4,1.6c-0.6,1.1-1,2.3-1.3,3.4c-0.2,0.8-0.7,1.2-1.5,1.3
+                  c-2.3,0.4-4,1.7-5.2,3.7c-0.7,1.3-1.3,2.6-1.8,3.9c-1.4,3.7-2.5,7.5-3.8,11.2C38.7,27,38.6,27,36.7,27c-2.3,0-2.1-0.4-2.1,2.1
+                  c0,0.8,0.2,1.2,1.1,1.2c0.3,0,0.7-0.1,0.8,0.2c0.1,0.3-0.2,0.5-0.4,0.7c-1.2,1.3-2.7,2-4.3,2.4c-1.9,0.5-3.8,0.9-5.7,1.5
+                  c-4.7,1.6-9.1,3.8-12.6,7.6c-2.1,2.3-3.5,5-4.7,7.8C5,59.2,3.2,68.3,1.8,77.5c-0.6,4.3-1.1,8.6-1.5,13C0.2,92.7,0,94.8,0,97
+                  c11.1,0,22.2,0,33.3,0c0.1-0.5-0.1-0.9-0.2-1.3c-0.7-1.8-2.1-2.7-3.8-3.1c-0.7-0.2-0.8-0.4-0.4-0.9c0.7-0.9,1.2-2,1.6-3.1
+                  c1.6-4.8,2.3-9.8,3.1-14.8C34.2,70,35.1,66.4,37,63c1.5-2.5,3.3-4.6,5.6-6.4c0.8-0.6,0.9-0.6,1,0.4c0.1,0.7,0.1,1.4,0.2,2.2
+                  c0.3,4.7,0.3,9.5-0.2,14.2c-0.3,3.7-0.5,7.4-0.2,11c0.4,4.3,1.2,8.4,2.2,12.6c4.4,0,8.9,0,13.3,0c-0.3-2.2-2.1-4-4.2-4.4
+                  c-1.3-0.2-2.5-0.1-3.8,0.2c-0.6,0.1-0.8,0-0.9-0.6c-0.4-5.3-0.1-10.6,1-15.8c1.3-6,2.4-12.1,3.1-18.2c0.3-2.5,1-4.8,2.3-7
+                  c1.2-2.1,2.2-4.3,3.4-6.5c0.9-1.7,1.1-3.4,0.4-5.2c-0.3-0.7-0.5-1.4-0.9-2.1c-1-2-2-3.9-2.9-5.9c-0.5-1-0.4-1.1,0.7-1.1
+                  c1.6,0,1.6,0,1.7-1.6c0-0.2,0-0.4,0-0.7c0-0.7-0.3-1.1-1-1c-0.5,0-1,0-1.5,0c-0.7,0-0.9-0.3-0.7-1c0.6-2.3,2.8-4.1,5.1-4.4
+                  c2.2-0.3,4.4,0,6.6,0.4c0.6,0.1,1,0,1.3-0.6c0.4-1,0.8-2,1.3-3c0.2-0.4,0.2-0.8-0.1-1.1C66.6,13.2,63.1,9.4,58.4,7
+                  c-0.5-0.3-0.8-0.6-0.9-1.1c-0.3-1.4-0.7-2.8-1.3-4.2C55.9,1,55.6,0.4,54.8,0z"/>
+                </g>
+              </svg>
             <h3 class="programs__title">Похудение</h3>
             <p class="programs__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора
               на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес </p>
             <a class="programs__catalog button" href="#">Каталог Slim<span>&#8594;</span></a>
           </li>
           <li class="programs__item programs__item--pro">
+              <svg width="67" height="28" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 134 56" style="enable-background:new 0 0 134 56;" xml:space="preserve">
+                <g><title>Иконка программы набора веса</title>
+                  <path
+                    d="M123.1,5.8c1.2-1.9,2.7-3.4,4.5-4.6c1-0.7,1.6-0.7,2.2,0.6c0.8,1.9,1.5,3.9,0.9,6c-0.2,0.8-0.1,1.4,0.4,2.1
+                  c0.6,0.8,1.1,1.6,1.6,2.3c1.3,1.9,1.8,3.9,0.9,6.2c-0.4,1-0.4,2-0.2,3.1c0.2,1,0.2,2,0,3c-0.3,1.6-1.1,2.7-2.7,3.2
+                  c-1.3,0.3-2.4,0.9-3.2,2c-0.2,0.3-0.5,0.5-0.9,0.5c-1.2,0.2-4.2-2.5-4.2-3.7c0-0.2,0-0.4,0-0.6c0.1-3.6-0.1-3.9-3.4-5.4
+                  c-0.7-0.3-1.3-0.6-1.8-1.2c-0.6-0.8-1.4-0.7-2.3-0.4c-0.8,0.4-1.4,0.9-1.3,1.9c0.3,2.4,0.4,4.8,0.3,7.3c0,0.3,0.1,0.6,0.2,0.8
+                  c3.1,4.5,4.3,9.8,5.8,14.9c1.2,3.9,3.4,6,7.4,6.3c0.6,0,1.3,0.2,1.9,0.3c1.8,0.3,2.9,1.5,3.4,3.2c0.7,2.1,0.3,2.6-1.8,2.6
+                  c-2.2,0-4.3,0-6.5,0c-0.9,0-1.6-0.2-2.3-0.8c-1-1-2.2-1.4-3.4-2c-1.3-0.6-2.6-1.3-3.4-2.6c-1.1-1.7-2.6-3.1-4-4.5
+                  c-2.8-2.9-5.8-5.7-8.4-8.7c-1.9-2.2-3.2-4.6-3.2-7.6c0-0.9-0.2-1.3-1.2-0.9c-0.3,0.2-0.7,0.3-1,0.3c-2.8,0-4.2,1.7-5.2,4.2
+                  c-0.9,2.1-2.1,4.1-3.2,6.2C88.5,40.9,88,42.4,88,44c0,2.4,0.6,3.2,2.8,4c1.4,0.5,2.7,1,3.4,2.4c0.8,1.6,0.6,2-1.1,2.1
+                  c-2.3,0-4.5,0-6.8,0c-0.9,0-1.5-0.3-1.9-1.1c-0.6-1-1.2-2-1.8-3c-1-1.7-1.4-3.4-0.7-5.4c0.6-1.7,0.3-3.6,0.1-5.3
+                  c-0.4-2.6,0-4.9,1.7-7c0.6-0.7,0.6-1-0.4-1.2c-4.1-0.8-8-2.3-11.8-4.1c0,0-0.1,0-0.1-0.1c-3.2-1.2-3.8-1-4.7,2.3
+                  c-0.8,2.8-1.6,5.6-2.2,8.5c-0.7,3.2,0.1,6.2,1.1,9.2c0.4,1.2,1.6,1.1,2.5,1.4c2,0.6,3.7,1.4,4.5,3.5c0.7,1.6,0.6,1.8-1.1,1.8
+                  c-1.7,0-3.4-0.1-5.2,0c-1.6,0.1-2.8-0.5-4.2-1.4c-4.8-3.2-6.2-8.1-6.6-13.4c-0.2-3.3-2-5.9-4.1-8.4c-0.4-0.5-0.8-0.7-1.4-0.3
+                  c-2.1,1.3-4.5,2.1-6.7,3c-4.8,1.8-9,4.6-12.2,8.8c-1.2,1.5-1.9,3.2-2.2,5.1c-0.3,1.8,0.2,2.6,2,3.1c1.9,0.6,2.7,1.5,2.9,3.4
+                  c0.1,0.8-0.2,1.2-1,1.2c-2.7,0-5.4,0-8.1,0c-0.6,0-1-0.4-1.3-0.8c-1.3-1.6-1.9-3.5-1.9-5.5c-0.1-3.5,0.3-6.9,0.9-10.3
+                  c0.4-2.1,1.4-3.8,3.4-4.8c5.9-2.8,9-8.1,11.8-13.6c0.6-1.1,0.1-1.3-0.9-1.2c-2.9,0.3-5.4,1.6-7.7,3.2c-3,2.1-5.7,4.6-8.3,7.1
+                  c-2.9,2.7-6.2,4.6-10.3,4.9C3.1,32.5-0.3,28.4,0,21.8c0.1-2.3,0.9-4.4,2.4-6.1c1.2-1.3,2.6-2,4.5-1.5c1.5,0.4,1.9,1.2,1.3,2.7
+                  c-0.3,0.6-0.7,1.1-1,1.7c-0.4,0.6-0.8,1.3-1,2c-1.1,3,0.4,5.1,3.5,5.4c3.3,0.3,6-1.1,8.5-3.1c3-2.4,5.7-5.2,8-8.3
+                  c3.7-4.8,8.5-7.3,14.4-8.1c2.3-0.3,4.3-1.3,6.5-1.9c4.1-1.2,8.3-1.9,12.7-1.8c2,0.1,3.9-0.3,5.8-1.1c4.9-2,10-2,15.1-1
+                  c4,0.8,8,1.8,11.9,2.8c2.2,0.5,4.7,0.3,7-0.2c4.4-1,8.9-1.9,13.4-2c3-0.1,5.9,0.4,8.6,1.7C123.6,3.9,123.6,3.9,123.1,5.8z"/>
+                </g>
+              </svg>
             <h3 class="programs__title">Набор массы</h3>
             <p class="programs__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
               поможет вашему коту нарастить необходимые мыщцы!</p>
@@ -63,15 +105,19 @@
         <h2 class="about__title">Как это работает</h2>
         <ul class="about__list">
           <li class="about__item about__item--useful">
+            <img class="about__image" src="img/advantage-leaf@1x.png" width="60" height="60" alt="листик">
             <p class="about__description">Функциональное питание содержит только полезные питательные вещества.</p>
           </li>
           <li class="about__item about__item--powder">
+            <img class="about__image" src="img/advantage-powder@1x.png" width="60" height="60" alt="порошок">
             <p class="about__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
           </li>
           <li class="about__item about__item--eating">
+            <img class="about__image" src="img/advantage-dining@1x.png" width="60" height="60" alt="прием пищи">
             <p class="about__description">Замените один-два приемы обычной еды на наше функциональное питание.</p>
           </li>
           <li class="about__item about__item--month">
+            <img class="about__image" src="img/advantage-clock@1x.png" width="60" height="60" alt="время">
             <p class="about__description">Уже через месяц наслаждайтесь измениниями к лучшему вашего питомца!</p>
           </li>
         </ul>
@@ -83,8 +129,10 @@
         <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
           Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнеиу спит 16
           часов в день.</p>
-        <p class="example__stats"> 5 кг <span class="example__legend">снижение веса</span> 60 дней <span
-            class="example__legend">затрачено времени</span></p>
+        <p class="example__stats"><span class="example__weight"> 5 кг <span class="example__legend">снижение веса</span></span><span class="example__weight"> 60 дней <span
+            class="example__legend">затрачено времени</span></span></p>
+        <!---    <p class="example__stats"><fieldset class="example__weight"> 5 кг <legend class="example__legend">снижение веса</legend></fieldset><fieldset class="example__weight"> 60 дней <legend
+              class="example__legend">затрачено времени</legend></fieldset></p>-->
         <small class="example__text">
           Затраты на питание: 15000руб.
         </small>
@@ -101,12 +149,13 @@
   <section class="contacts">
     <h2 class="contacts__title">Приглашаем к сотрудничеству диллеров!</h2>
     <p class="contacts__text">ул.Большая Конюшенская , д.19/8 Санкт-Петербург</p>
+    <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1555329724939!5m2!1sru!2sru" width="320" height="360" frameborder="0" style="border:0" allowfullscreen></iframe>-->
     <img class="contacts__image" src="img/bg-map-mobile@1x.png" width="320" height="360" alt="Карта">
   </section>
   <footer class="footer">
     <div class="footer__wrapper">
       <a class="footer__logo">
-        <img class="footer__logo-image" src="img/logo-footer.svg" width="101" height="18" alt="Cat Energy">
+        <img class="footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
       </a>
       <div class="social">
         <ul class="social__list">
@@ -125,13 +174,31 @@
         </ul>
       </div>
       <div class="copyright">
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" alt="Разработано HTML Academy">HTML
-          Academy
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" alt="Разработано HTML Academy"><div class="copyright__link-text">HTML
+          Academy</div>
           <img class="copyright__logo-image" src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy">
         </a>
       </div>
     </div>
   </footer>
+  <div class="block-mock"></div>
+
+<script>
+  var navMain = document.querySelector('.navigation');
+  var navToggle = document.querySelector('.navigation__toggle');
+
+  navMain.classList.remove('navigation--nojs');
+
+  navToggle.addEventListener('click', function() {
+    if (navMain.classList.contains('navigation--closed')) {
+      navMain.classList.remove('navigation--closed');
+      navMain.classList.add('navigation--opened');
+    } else {
+      navMain.classList.add('navigation--closed');
+      navMain.classList.remove('navigation--opened');
+    }
+  });
+</script>
 </body>
 
 </html>
