--- a/source/form.html
+++ b/source/form.html
@@ -5,14 +5,13 @@
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи - подбор программы</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
   <header class="header">
     <div class="header__wrapper">
-    <a class="header__logo">
+    <a class="header__logo" href="index.html">
       <img class="header__logo-image" src="img/logo-mobile.svg" width="200" height="50" alt="Cat Energy">
     </a>
     <nav class="navigation navigation--nojs">
@@ -117,14 +116,14 @@
     </form>
     </main>
     <section class="contacts">
-        <div class="contacts__wrapper">
-          <div class="contacts__info">
-            <h2 class="contacts__title">Приглашаем к сотрудничеству диллеров!</h2>
-            <p class="contacts__text">ул.Большая Конюшенская , д.19/8 Санкт-Петербург</p>
-          </div>
-        <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1555329724939!5m2!1sru!2sru" width="320" height="360" frameborder="0" style="border:0" allowfullscreen></iframe>-->
-        <img class="contacts__image" src="img/bg-map-mobile@1x.png" width="320" height="360" alt="Карта">
+      <div class="contacts__wrapper">
+        <div class="contacts__info">
+          <h2 class="contacts__title">Приглашаем к сотрудничеству диллеров!</h2>
+          <p class="contacts__text">ул.Большая Конюшенская , д.19/8 Санкт-Петербург</p>
         </div>
+      </div>
+      <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1555329724939!5m2!1sru!2sru" width="320" height="360" frameborder="0" style="border:0" allowfullscreen></iframe>-->
+      <img class="contacts__image" src="img/bg-map-mobile@1x.png" width="320" height="360" alt="Карта">
     </section>
     <footer class="footer">
         <div class="footer__wrapper">
